# ARES_deck

./: .gitignore  README.md  controller_protocol.py  controller_udp_receiver.py  controller_udp_sender.py  requirement.txt  start_controller.sh  start_receiver.sh  start_single_udp_receiver.sh  start_single_usb.sh  start_usb.sh  start_usb_bridge.sh  steamdeck_controller_panel.py  udp_receiver.py
H100/: readme.md
app/: controller_panel.py  params.py  ros_udp_receiver.py  simulate_controller.py  udp_receiver.py  udp_sender.py
app/config/: param.yaml
ares_deck_interfaces/: CMakeLists.txt  package.xml
ares_deck_interfaces/action/: Command.action
ares_usb/: CMakeLists.txt  ares_usb_comm_design.md  package.xml
ares_usb/ARES_bulk_library/: CMakeLists.txt  ares_protocol.cpp  ares_protocol.hpp
ares_usb/include/ares_usb_comm/: helpers.hpp
ares_usb/launch/: comm_bringup.launch.py
ares_usb/src/: test_publisher_node.cpp  usb_bridge_node.cpp
ares_usb_bridge/: CMakeLists.txt  ares_usb_bridge_design.md  package.xml
ares_usb_bridge/ARES_bulk_library/: ares_protocol.cpp  ares_protocol.hpp
ares_usb_bridge/include/ares_usb_bridge/: helpers.hpp
ares_usb_bridge/launch/: usb_bridge.launch.py
ares_usb_bridge/src/: ares_usb_bridge_node.cpp
core/: map_message.py  protocol.py  udp_receiver.py  udp_sender.py
tools/: usb_write_monitor.py
ui/: config.py  inputs.py  panel.py
ui/action_command/: __init__.py  dialog.py
ui/map_editor/: __init__.py  dialog.py  model.py  modes.json
